--- a/themes/basic/skin/css/styles.css
+++ b/themes/basic/skin/css/styles.css
@@ -2,8 +2,8 @@ html {
     height: 100%;
 }
 body {
-    background-color: #F8F8F8;
     height: 100%;
+    padding-top: 70px;
 }
 .middle_area {
     height: 230px;
