--- a/themes/basic/skin/css/styles.css
+++ b/themes/basic/skin/css/styles.css
@@ -52,3 +52,10 @@ table thead{
     font-size: 12px;
 
 }
+.pagination {
+    border-radius: 4px;
+    display: inline-block;
+    float: right;
+    margin: 10px 0;
+    padding-left: 0;
+}
