--- a/themes/basic/skin/css/styles.css
+++ b/themes/basic/skin/css/styles.css
@@ -152,14 +152,24 @@ body{
     overflow-y: scroll;
 }
 .modal-open{
-    overflow-y: auto;
+
 }
 .modal{
     overflow-y: auto;
 }
 .modal-dialog .pagination{
-    margin: 10px 10px 0 0;
+    margin: 10px 0px 0 0;
+}
+.modal-dialog .table .selected td{
+    background-color: #c3c3c3;
 }
 .modal-dialog .table{
     margin-bottom: 0;
+    margin-top: 10px;
+}
+#task-parent-grid table tr td:first-child{
+    text-align: center;
+}
+table thead th:first-child {
+    border-left: none;
 }
