--- a/themes/basic/skin/css/styles.css
+++ b/themes/basic/skin/css/styles.css
@@ -188,3 +188,6 @@ table thead th:first-child {
     display: inline-block;
     width: 80%;
 }
+.modal-open #task-organizations-selected-grid .defender{
+   display: none;
+}
