--- a/themes/basic/skin/css/styles.css
+++ b/themes/basic/skin/css/styles.css
@@ -265,15 +265,19 @@ table thead th:first-child {
     background-color: #428bca;
 }
 
-.priority-high, .status-received {
+.dh-priority-urgent, .priority-urgent {
+    background-color: #f03606 !important;
+}
+
+.dh-priority-high, .priority-high, .status-received {
     background-color: #f0ad4e !important;
 }
 
-.priority-normal, .status-approved {
+.dh-priority-normal, .priority-normal, .status-approved {
     background-color: #5cb85c !important;
 }
 
-.priority-low, .status-pending {
+.dh-priority-low, .priority-low, .status-pending {
     background-color: #777 !important;
 }
 
@@ -300,6 +304,46 @@ table thead th:first-child {
 .table-hover tr:hover td {
     background-color: #e3d3d5 !important;
 }
-.formatted{
+
+.formatted {
     font-family: monospace, courier, typewriter, monospace;
+}
+
+.event {
+    background-color: #c3c3c3;
+    border: 1px solid #fff;
+    border-radius: 1px;
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4) inset;
+    display: block;
+    height: 16px;
+    margin-bottom: 2px;
+    margin-right: 2px;
+    width: 16px;
+}
+
+#cal-slide-tick {
+    display: none;
+    visibility: hidden;
+}
+
+#cal-slide-content a.event-item {
+    color: #706c6b;
+}
+
+#cal-slide-content:hover {
+    background: none;
+    background-color: #f2f2f2;
+}
+
+#cal-slide-content {
+    background: none;
+    background-color: #f9f9f9;
+    border-radius: 0;
+    box-shadow: 0 0px 12px rgba(39, 63, 66, 0.29);
+    -webkit-box-shadow: 0 0px 12px rgba(39, 63, 66, 0.29);
+
+}
+
+#cal-slide-box {
+    z-index: 10000;
 }
